# marvell-octeon-roc

./: CMakeLists.txt  LICENSE  README  README.md  bitmap.h  common.h  init.c  memzone.h  platform.h  util.h
base/: roc_ae.h  roc_api.h  roc_bphy_cgx.c  roc_constants.h  roc_cpt.c  roc_cpt.h  roc_dev.c  roc_dev_priv.h  roc_dpi.c  roc_dpi.h  roc_dpi_priv.h  roc_ie_ot.c  roc_ie_ot_tls.h  roc_irq.c  roc_mbox.c  roc_mbox.h  roc_mcs_priv.h  roc_model.c  roc_model.h  roc_nix.c  roc_nix.h  roc_nix_debug.c  roc_nix_inl.c  roc_nix_inl_dev.c  roc_nix_npc.c  roc_nix_priv.h  roc_nix_queue.c  roc_nix_rss.c  roc_nix_stats.c  roc_nix_tm.c  roc_nix_tm_ops.c  roc_nix_tm_utils.c  roc_npa.c  roc_npa.h  roc_npc.c  roc_npc.h  roc_npc_aging.c  roc_npc_mcam.c  roc_npc_parse.c  roc_npc_priv.h  (+7 more)
base/hw/: cpt.h  dpi.h  sdp.h
